Bug 44143 - formula's that use data from pivot table don't update with the pivot table
Summary: formula's that use data from pivot table don't update with the pivot table
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.5
Keywords: regression
: 45370 (view as bug list)
Depends on:
Blocks: mab3.5
  Show dependency treegraph
 
Reported: 2011-12-25 15:38 UTC by Rob Snelders
Modified: 2012-02-16 07:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
A file with a pivot-table and a formula. The formula doesn't update correctly (10.38 KB, application/vnd.oasis.opendocument.spreadsheet)
2011-12-25 15:38 UTC, Rob Snelders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rob Snelders 2011-12-25 15:38:04 UTC
Created attachment 54816 [details]
A file with a pivot-table and a formula. The formula doesn't update correctly

When you have a formula which uses data from a pivot-table then it doesn't update the answer after a update in the pivot table.

In the attached ods:
When you change the date in the pivot-table then the cell E6 doesn't get updated correctly after the first change it the table. So the first time you change the pivot-table it does get updated. Afterwards not anymore. Version 3.4.2 does update it correctly.

I tried it on Ubuntu 10.04 on X86_64 and on Windows XP on X86.
Comment 1 Regina Henschel 2011-12-29 14:37:05 UTC
Confirm with LO3.5beta2 on WinXP. Not only simple reference does not update, but the special function GETPIVOTDATA does not update too. You need a STRG+SHIFT+F9
Comment 2 Kohei Yoshida 2012-01-23 10:05:10 UTC
BTW is this a regression or did it never work?
Comment 3 Kohei Yoshida 2012-01-23 14:10:01 UTC
Let me know if this is a regression from an earlier version, or something that never worked.
Comment 4 Rob Snelders 2012-01-23 14:15:49 UTC
I'll have to test this tomorrow at work. There I have LO 3.4.2 to test.
Comment 5 Rob Snelders 2012-01-25 03:16:46 UTC
I have tested it on 3.4.2 on Windows XP. There it is slow but it works.
Comment 6 Kohei Yoshida 2012-01-25 13:39:55 UTC
K. Thanks. I'll look into it.
Comment 7 Kohei Yoshida 2012-01-25 18:33:07 UTC
Ok. So, let's not confuse the original reported bug with GETPIVOTDATA, which BTW works for me.  If that doesn't work please file a different bug.

I'll stick with the originally reported bug.
Comment 8 Kohei Yoshida 2012-01-25 18:40:06 UTC
(In reply to comment #7)
> Ok. So, let's not confuse the original reported bug with GETPIVOTDATA, which
> BTW works for me.  If that doesn't work please file a different bug.

Ah. It's the filtering by the page field that's not working.  And yup, GETPIVOTDATA doesn't get updated when you change the page field filter value.  I was changing the date values in the original source range and refreshing the table, which updates the referencing cells correctly.
Comment 9 Kohei Yoshida 2012-01-25 20:00:49 UTC
Ah.  Actually refreshing the table only works for the first time too.
Comment 10 Kohei Yoshida 2012-01-26 09:55:56 UTC
I've at least identified the commit that introduced this regression.  It's the rework done in ScColumn::DeleteRange().  Looking further into this at the moment...
Comment 11 Kohei Yoshida 2012-01-26 13:04:17 UTC
Fixed on master

http://cgit.freedesktop.org/libreoffice/core/commit/?id=af70bc00c6714eb8695babdf5af07416552f7034

and asking the list to have it cherry-picked to 3.5.
Comment 12 Eike Rathke (retired, only occasionally showing up) 2012-01-27 05:05:11 UTC
New patch replacing the old one on master
http://cgit.freedesktop.org/libreoffice/core/commit/?id=41e92ab2b7a8fcb7f5738f656bdac47bc0847f29
pushed also to 3-5
http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5&id=08adeedce926bac1a010c26f2a4ae2d5fb761376
awaiting review for 3-5-0
Comment 13 Rainer Bielefeld Retired 2012-01-29 11:03:59 UTC
Works fine  with "LibreOffice 3.4.5 German UI [Build ID: OOO340m1 (Build:502)]" parallel Server installation on German WIN7 Home Premium (64bit).

Menu 'Options -> Cell Contents -> Update' will not work
Toggling any checkbox in menu 'Tools -> Options -> Calc -> Calculate -> Input Settings' will make the values change, after a new paste - delete a new checkbox toggle will be necessary to update calculated values.

I am pretty sure that this one has the same roots like "Bug 45370 - EDITING: Calculated cell contents not updated after copy - paste - delete of source values"
Comment 14 Eike Rathke (retired, only occasionally showing up) 2012-01-31 14:37:49 UTC
Found pushed to 3-5-0 http://cgit.freedesktop.org/libreoffice/core/commit/?h=libreoffice-3-5-0&id=2d930ae25bb1ca90d0c186e7f34407bf1adfa54d
Comment 15 Eike Rathke (retired, only occasionally showing up) 2012-01-31 14:45:12 UTC
*** Bug 45370 has been marked as a duplicate of this bug. ***