fdo#44143: Keep cells with broadcasters alive during deletion.

Or else it would partially break formula reference chain.